--- a/docs/3/34.md
+++ b/docs/3/34.md
@@ -12,14 +12,17 @@
 搜寻匹配
 ![daca0baf1beef2113577855134996739](assets/daca0baf1beef2113577855134996739.jpg)
 
+
 经典的资产定价以及宏观经济学模型中假设交易永远可以无摩擦地进行。特别地，每个人手中的商品都可以与其他任何人手中的商品交易。然而，现实中交易双方并不总是恰好能提供对方想要的东西的。例如，教师给学生讲一上午的课，作为回报，教师想要下课后吃一顿好吃的。但是学生不会做饭，怎么办？这个时候货币就派上用场了。学生只需要把货币交给老师，老师把货币交给厨师，然后老师就能得到一顿大餐。厨师为什么愿意为了一张纸片忙活半天呢？因为厨师相信将来他把这张纸片给下一个商家的时候，可以换回自己想要的东西。
 
 这个例子体现了一个经典的经济学问题：double coincidence of wants，即交易双方都恰好想要对方能够提供的商品或服务。现实中这种情况很罕见。为了使交易能够顺利进行，人们发明了货币。在这个例子中，货币发挥了交易媒介(medium of exchange)的作用。
 
 
 02 
-社会保险
+社会保
 ![bd68fbbf6ecb96ed6f8586ca624d5af2](assets/bd68fbbf6ecb96ed6f8586ca624d5af2.jpg)
+险
+
 
 思考一个问题：老年人和年轻人如何交易？老年人无法生产，只能消费年轻人生产的商品。但是年轻人凭什么给老年人打工呢？在经典理论中，老年人只能通过债务交换年轻人生产的商品，但是老年人没有办法偿还债务，所以老年人无法和年轻人交易。
 
@@ -31,6 +34,8 @@
 03 
 货币中性
 ![87ef2e549002d83da943f1910d089199](assets/87ef2e549002d83da943f1910d089199.jpg)
+
+
 
 在有交易摩擦的世界中，货币有了价值。那么货币的数量会影响人们的交易吗？古典的观点认为，货币数量只会影响名义价格（CPI），而不会影响任何实际变量（失业率、消费、实际GDP等）。这个理论被称为“货币中性”。
 
