--- a/docs/3/34.md
+++ b/docs/3/34.md
@@ -19,9 +19,9 @@
 
 
 02 
-社会保
+社会保险
 ![bd68fbbf6ecb96ed6f8586ca624d5af2](assets/bd68fbbf6ecb96ed6f8586ca624d5af2.jpg)
-险
+
 
 
 思考一个问题：老年人和年轻人如何交易？老年人无法生产，只能消费年轻人生产的商品。但是年轻人凭什么给老年人打工呢？在经典理论中，老年人只能通过债务交换年轻人生产的商品，但是老年人没有办法偿还债务，所以老年人无法和年轻人交易。
